--- a/frontend/src/Calendar.css
+++ b/frontend/src/Calendar.css
@@ -32,8 +32,8 @@
   font-size: 16px;
   margin-left: 15px;
   transition: all 0.3s ease;
-  height: 58px;
-  width: 58px;
+  height: 59px;
+  width: 59px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -86,22 +86,23 @@
   .header-left {
     display: flex;
     align-items: center;
-    gap: 5px;
-    margin-bottom: 10px;
     justify-content: center;
+    gap: 10px;
+    margin-bottom: 10px;
     width: 100%;
+    height: 59px; /* Match icon height */
   }
   
   .app-logo {
-    height: 58px;
-    width: 58px;
+    height: 59px;
+    width: 59px;
     max-width: 100%;
     border-radius: 6px;
   }
   
   .back-to-home-button {
-    height: 58px;
-    width: 58px;
+    height: 59px;
+    width: 59px;
     margin-left: 10px;
   }
 }
@@ -153,10 +154,9 @@
 
 .desktop-mobile-switch {
   display: flex;
-  justify-content: center;
   align-items: center;
   gap: 10px;
-  margin-bottom: 15px;
+  margin-left: 15px;
 }
 
 .switch-button {
